  will NOT be portable across different versions of Abella, as they are very
  particular to the "search" tactic implementation.

* Added a new tactic, `pick`, that has this syntax:

        pick x y (z:ty), F.

  The tactic tries to solve `exists x y (z:ty), F` automaticall, and if
  it succeeds it adds the bindings for `x`, `y`, etc. You can then use them
  in the rest of the proof.

* Added a new tactic form for `backchain`:

        backchain <num> <hyp_or_lemma>.

  where the `<num>`, which is optional, can give a depth bound to the search
  that is automatically attempted on generated goals. Give it a depth of 0
  if you want to prevent searching. The default value is the value of the
  search_depth flag.

Bugfixes

* Annotation mode (-a) output is no longer printed in other modes


Changes in 2.0.3 from 2.0.2
---------------------------

Potentially breaking changes

* Removed ~ and != notations (introduced in 2.0.2, and unused by anyone as
  far as I know). A general notation support may be considered for Abella
  in the future. Meanwhile, we prefer simplicity and predictability.


Additions

* The unfold tactic has an optional argument, "(all)", that produces a
  disjunction of all solutions to the matching problem of the conclusion of
  a subgoal and its relevant (co)definition. The disjuncts are produced in
  the same order as the clauses, but if a single clause has multiple ways to
  match the head then the disjuncts for that clause are in some unspecified
  order (that depends on the details of the unification algorithm).
* The following tactic forms have been added:

      apply *H to ...
      apply ... to ... *H ...
      backchain *H
      cut *H ...
      cut ... with *H
      inst *H with ...
      monotone *H with ...

  In each case, if H names a hypothesis, then the tactic consumes the
  hypothesis (like the clear tactic). Note that if hypothesis hints are
  given, then these hints are used *after* consuming the hypotheses. Thus,